# awa5_rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
examples/awa/: fib.awa  hello_world.awa  libfoo.awa  macro.awa  raylib.awa  raylib3d.awa
examples/awasm/: fib.awasm  hello_world.awasm  libfoo.awasm  macro.awasm  raylib.awasm  raylib3d.awasm
examples/lib/: awa5_raylib.c  foo.c
examples/wasm/raylib/: Cargo.toml
examples/wasm/raylib/.cargo/: config.toml
examples/wasm/raylib/assets/: hello_world.awasm  jorb.mtl  raylib.awasm  raylib3d.awasm
examples/wasm/raylib/src/: main.rs
lib_wasm/: CMakeLists.txt
lib_wasm/lib/: awa5_raylib.c
src/: assembler.rs  awa5_raylib.rs  dynlib.rs  interpreter.rs  lib.rs  main.rs  parser.rs
