[package]
name = "awa5_rs"
version = "0.1.14"
edition = "2021"
description = "An AWA5.0 CLI tool written in Rust (btw)"
keywords = ["esolang", "awa5_rs", "awatalk"]
categories = ["command-line-interface", "compilers"]
license = "GPL-3.0-or-later"
repository = "https://github.com/liraymond04/awa5_rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
libloading = "0.8.4"
